static/k8s/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cloudlab-static-daemonset
spec:
  selector:
    matchLabels:
      app: cloudlab-static
  template:
    metadata:
      labels:
        app: cloudlab-static
    spec:
      containers:
        - name: cloudlab-static
          image: salitrapraveen/cloudlab-static:latest
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
